ParImper.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParImper.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListProgStmt                            (4)
	ProgStmt -> Type Ident '(' ListArg ')' Block       (5)
	ProgStmt -> Stmt                                   (6)
	ListProgStmt -> ProgStmt                           (7)
	ListProgStmt -> ProgStmt ListProgStmt              (8)
	Arg -> Type Ident                                  (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	Block -> '{' ListStmt '};'                         (13)
	ListStmt ->                                        (14)
	ListStmt -> Stmt ListStmt                          (15)
	Stmt -> 'var' AStmt ';'                            (16)
	Stmt -> 'const' AStmt ';'                          (17)
	Stmt -> AStmt ';'                                  (18)
	Stmt -> TBox ':=:' Expr ';'                        (19)
	Stmt -> IfBl ListElifBl                            (20)
	Stmt -> IfBl ListElifBl ElseBl                     (21)
	Stmt -> 'for' AStmt 'to' Expr Block                (22)
	Stmt -> 'while' '(' Expr ')' Block                 (23)
	Stmt -> 'return' Expr ';'                          (24)
	Stmt -> 'break' ';'                                (25)
	Stmt -> 'continue' ';'                             (26)
	Stmt -> 'print' Expr ';'                           (27)
	Stmt -> 'skip' ';'                                 (28)
	Stmt -> Expr ';'                                   (29)
	AStmt -> Ident ':=' Expr                           (30)
	TBox -> '[' ListTElem ']'                          (31)
	TElem -> TBox                                      (32)
	TElem -> Ident                                     (33)
	TElem -> '_'                                       (34)
	ListTElem ->                                       (35)
	ListTElem -> TElem                                 (36)
	ListTElem -> TElem ',' ListTElem                   (37)
	IfBl -> 'if' '(' Expr ')' Block                    (38)
	ElifBl -> 'elif' '(' Expr ')' Block                (39)
	ElseBl -> 'else' Block                             (40)
	ListElifBl ->                                      (41)
	ListElifBl -> ElifBl ListElifBl                    (42)
	Type -> 'int'                                      (43)
	Type -> 'string'                                   (44)
	Type -> 'bool'                                     (45)
	Type -> '<' ListType '>'                           (46)
	ListType ->                                        (47)
	ListType -> Type                                   (48)
	ListType -> Type ',' ListType                      (49)
	Expr6 -> Ident                                     (50)
	Expr6 -> Integer                                   (51)
	Expr6 -> '_T'                                      (52)
	Expr6 -> '_F'                                      (53)
	Expr6 -> '<<' ListExpr '>>'                        (54)
	Expr6 -> Ident '(' ListExpr ')'                    (55)
	Expr6 -> String                                    (56)
	Expr6 -> '(' Expr ')'                              (57)
	Expr5 -> '-' Expr6                                 (58)
	Expr5 -> '!' Expr6                                 (59)
	Expr5 -> Expr6                                     (60)
	Expr4 -> Expr4 MulOp Expr5                         (61)
	Expr4 -> Expr5                                     (62)
	Expr3 -> Expr3 AddOp Expr4                         (63)
	Expr3 -> Expr4                                     (64)
	Expr2 -> Expr2 RelOp Expr3                         (65)
	Expr2 -> Expr3                                     (66)
	Expr1 -> Expr2 '&&' Expr1                          (67)
	Expr1 -> Expr2                                     (68)
	Expr -> Expr1 '||' Expr                            (69)
	Expr -> Expr1                                      (70)
	ListExpr ->                                        (71)
	ListExpr -> Expr                                   (72)
	ListExpr -> Expr ',' ListExpr                      (73)
	AddOp -> '+'                                       (74)
	AddOp -> '-'                                       (75)
	MulOp -> '*'                                       (76)
	MulOp -> '/'                                       (77)
	MulOp -> '%'                                       (78)
	RelOp -> '<'                                       (79)
	RelOp -> '<='                                      (80)
	RelOp -> '>'                                       (81)
	RelOp -> '>='                                      (82)
	RelOp -> '=='                                      (83)
	RelOp -> '!='                                      (84)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	':='           { PT _ (TS _ 12) }
	':=:'          { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<<'           { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'>'            { PT _ (TS _ 19) }
	'>='           { PT _ (TS _ 20) }
	'>>'           { PT _ (TS _ 21) }
	'['            { PT _ (TS _ 22) }
	']'            { PT _ (TS _ 23) }
	'_'            { PT _ (TS _ 24) }
	'_F'           { PT _ (TS _ 25) }
	'_T'           { PT _ (TS _ 26) }
	'bool'         { PT _ (TS _ 27) }
	'break'        { PT _ (TS _ 28) }
	'const'        { PT _ (TS _ 29) }
	'continue'     { PT _ (TS _ 30) }
	'elif'         { PT _ (TS _ 31) }
	'else'         { PT _ (TS _ 32) }
	'for'          { PT _ (TS _ 33) }
	'if'           { PT _ (TS _ 34) }
	'int'          { PT _ (TS _ 35) }
	'print'        { PT _ (TS _ 36) }
	'return'       { PT _ (TS _ 37) }
	'skip'         { PT _ (TS _ 38) }
	'string'       { PT _ (TS _ 39) }
	'to'           { PT _ (TS _ 40) }
	'var'          { PT _ (TS _ 41) }
	'while'        { PT _ (TS _ 42) }
	'{'            { PT _ (TS _ 43) }
	'||'           { PT _ (TS _ 44) }
	'};'           { PT _ (TS _ 45) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	ProgStmt        rules 5, 6
	ListProgStmt    rules 7, 8
	Arg             rule  9
	ListArg         rules 10, 11, 12
	Block           rule  13
	ListStmt        rules 14, 15
	Stmt            rules 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29
	AStmt           rule  30
	TBox            rule  31
	TElem           rules 32, 33, 34
	ListTElem       rules 35, 36, 37
	IfBl            rule  38
	ElifBl          rule  39
	ElseBl          rule  40
	ListElifBl      rules 41, 42
	Type            rules 43, 44, 45, 46
	ListType        rules 47, 48, 49
	Expr6           rules 50, 51, 52, 53, 54, 55, 56, 57
	Expr5           rules 58, 59, 60
	Expr4           rules 61, 62
	Expr3           rules 63, 64
	Expr2           rules 65, 66
	Expr1           rules 67, 68
	Expr            rules 69, 70
	ListExpr        rules 71, 72, 73
	AddOp           rules 74, 75
	MulOp           rules 76, 77, 78
	RelOp           rules 79, 80, 81, 82, 83, 84

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'!'            shift, and enter state 21
	'('            shift, and enter state 22
	'-'            shift, and enter state 23
	'<'            shift, and enter state 24
	'<<'           shift, and enter state 25
	'['            shift, and enter state 26
	'_F'           shift, and enter state 27
	'_T'           shift, and enter state 28
	'bool'         shift, and enter state 29
	'break'        shift, and enter state 30
	'const'        shift, and enter state 31
	'continue'     shift, and enter state 32
	'for'          shift, and enter state 33
	'if'           shift, and enter state 34
	'int'          shift, and enter state 35
	'print'        shift, and enter state 36
	'return'       shift, and enter state 37
	'skip'         shift, and enter state 38
	'string'       shift, and enter state 39
	'var'          shift, and enter state 40
	'while'        shift, and enter state 41
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 42
	L_quoted       shift, and enter state 43

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Program        goto state 6
	ProgStmt       goto state 7
	ListProgStmt   goto state 8
	Stmt           goto state 9
	AStmt          goto state 10
	TBox           goto state 11
	IfBl           goto state 12
	Type           goto state 13
	Expr6          goto state 14
	Expr5          goto state 15
	Expr4          goto state 16
	Expr3          goto state 17
	Expr2          goto state 18
	Expr1          goto state 19
	Expr           goto state 20

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	':='           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'>>'           reduce using rule 1
	']'            reduce using rule 1
	'to'           reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	AStmt -> Ident . ':=' Expr                          (rule 30)
	Expr6 -> Ident .                                    (rule 50)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 55)

	'!='           reduce using rule 50
	'%'            reduce using rule 50
	'&&'           reduce using rule 50
	'('            shift, and enter state 92
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	'-'            reduce using rule 50
	'/'            reduce using rule 50
	':='           shift, and enter state 93
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'||'           reduce using rule 50


State 4

	Expr6 -> Integer .                                  (rule 51)

	'!='           reduce using rule 51
	'%'            reduce using rule 51
	'&&'           reduce using rule 51
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'>>'           reduce using rule 51
	'to'           reduce using rule 51
	'{'            reduce using rule 51
	'||'           reduce using rule 51


State 5

	Expr6 -> String .                                   (rule 56)

	'!='           reduce using rule 56
	'%'            reduce using rule 56
	'&&'           reduce using rule 56
	')'            reduce using rule 56
	'*'            reduce using rule 56
	'+'            reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'/'            reduce using rule 56
	';'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'=='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'>>'           reduce using rule 56
	'to'           reduce using rule 56
	'{'            reduce using rule 56
	'||'           reduce using rule 56


State 6

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 7

	ListProgStmt -> ProgStmt .                          (rule 7)
	ListProgStmt -> ProgStmt . ListProgStmt             (rule 8)

	'!'            shift, and enter state 21
	'('            shift, and enter state 22
	'-'            shift, and enter state 23
	'<'            shift, and enter state 24
	'<<'           shift, and enter state 25
	'['            shift, and enter state 26
	'_F'           shift, and enter state 27
	'_T'           shift, and enter state 28
	'bool'         shift, and enter state 29
	'break'        shift, and enter state 30
	'const'        shift, and enter state 31
	'continue'     shift, and enter state 32
	'for'          shift, and enter state 33
	'if'           shift, and enter state 34
	'int'          shift, and enter state 35
	'print'        shift, and enter state 36
	'return'       shift, and enter state 37
	'skip'         shift, and enter state 38
	'string'       shift, and enter state 39
	'var'          shift, and enter state 40
	'while'        shift, and enter state 41
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 42
	L_quoted       shift, and enter state 43
	%eof           reduce using rule 7

	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	ProgStmt       goto state 7
	ListProgStmt   goto state 91
	Stmt           goto state 9
	AStmt          goto state 10
	TBox           goto state 11
	IfBl           goto state 12
	Type           goto state 13
	Expr6          goto state 14
	Expr5          goto state 15
	Expr4          goto state 16
	Expr3          goto state 17
	Expr2          goto state 18
	Expr1          goto state 19
	Expr           goto state 20

State 8

	Program -> ListProgStmt .                           (rule 4)

	%eof           reduce using rule 4


State 9

	ProgStmt -> Stmt .                                  (rule 6)

	'!'            reduce using rule 6
	'('            reduce using rule 6
	'-'            reduce using rule 6
	'<'            reduce using rule 6
	'<<'           reduce using rule 6
	'['            reduce using rule 6
	'_F'           reduce using rule 6
	'_T'           reduce using rule 6
	'bool'         reduce using rule 6
	'break'        reduce using rule 6
	'const'        reduce using rule 6
	'continue'     reduce using rule 6
	'for'          reduce using rule 6
	'if'           reduce using rule 6
	'int'          reduce using rule 6
	'print'        reduce using rule 6
	'return'       reduce using rule 6
	'skip'         reduce using rule 6
	'string'       reduce using rule 6
	'var'          reduce using rule 6
	'while'        reduce using rule 6
	L_Ident        reduce using rule 6
	L_integ        reduce using rule 6
	L_quoted       reduce using rule 6
	%eof           reduce using rule 6


State 10

	Stmt -> AStmt . ';'                                 (rule 18)

	';'            shift, and enter state 90


State 11

	Stmt -> TBox . ':=:' Expr ';'                       (rule 19)

	':=:'          shift, and enter state 89


State 12

	Stmt -> IfBl . ListElifBl                           (rule 20)
	Stmt -> IfBl . ListElifBl ElseBl                    (rule 21)

	'!'            reduce using rule 41
	'('            reduce using rule 41
	'-'            reduce using rule 41
	'<'            reduce using rule 41
	'<<'           reduce using rule 41
	'['            reduce using rule 41
	'_F'           reduce using rule 41
	'_T'           reduce using rule 41
	'bool'         reduce using rule 41
	'break'        reduce using rule 41
	'const'        reduce using rule 41
	'continue'     reduce using rule 41
	'elif'         shift, and enter state 88
	'else'         reduce using rule 41
	'for'          reduce using rule 41
	'if'           reduce using rule 41
	'int'          reduce using rule 41
	'print'        reduce using rule 41
	'return'       reduce using rule 41
	'skip'         reduce using rule 41
	'string'       reduce using rule 41
	'var'          reduce using rule 41
	'while'        reduce using rule 41
	'};'           reduce using rule 41
	L_Ident        reduce using rule 41
	L_integ        reduce using rule 41
	L_quoted       reduce using rule 41
	%eof           reduce using rule 41

	ElifBl         goto state 86
	ListElifBl     goto state 87

State 13

	ProgStmt -> Type . Ident '(' ListArg ')' Block      (rule 5)

	L_Ident        shift, and enter state 2

	Ident          goto state 85

State 14

	Expr5 -> Expr6 .                                    (rule 60)

	'!='           reduce using rule 60
	'%'            reduce using rule 60
	'&&'           reduce using rule 60
	')'            reduce using rule 60
	'*'            reduce using rule 60
	'+'            reduce using rule 60
	','            reduce using rule 60
	'-'            reduce using rule 60
	'/'            reduce using rule 60
	';'            reduce using rule 60
	'<'            reduce using rule 60
	'<='           reduce using rule 60
	'=='           reduce using rule 60
	'>'            reduce using rule 60
	'>='           reduce using rule 60
	'>>'           reduce using rule 60
	'to'           reduce using rule 60
	'{'            reduce using rule 60
	'||'           reduce using rule 60


State 15

	Expr4 -> Expr5 .                                    (rule 62)
